vlib/v/checker/tests/defer_fn_inside_lock_stmt_err.vv
struct St {}

fn main() {
	shared x := St{}
	lock x {
		defer {} // ok
		defer(fn) {} // fail
		_ = x
	}
}
